fix: no wrap "more" link 阅读全文链接不换行
https://github.com/MOxFIVE/M-Hexo-Blog/issues/14

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -299,7 +299,7 @@
 
 .article-more-link{
   margin-top: 5px;
-  text-align: right;
+  float: right;
   a{
     background: #4d4d4d;
     color: #fff;
